# spritecollab-srv

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build-and-start-docker.sh  docker-compose.yml
.github/workflows/: check-and-publish.yml
sc-activity-rec/: Cargo.toml
sc-activity-rec/examples/: export.rs
sc-activity-rec/src/: lib.rs  local_credits_file.rs  serialize_oid.rs
sc-common/: Cargo.toml
sc-common-db/: Cargo.toml
sc-common/src/: credit_names.rs  credit_row.rs  lib.rs  search.rs
spritecollab-pub/: .env.example  Cargo.toml  Dockerfile
src/: cache.rs  config.rs  discord_reputation.rs  main.rs  scheduler.rs  schema.rs  search.rs  sprite_collab.rs
src/assets/: fs_check.rs  img_util.rs  mod.rs  portrait_sheets.rs  sprite_sheets.rs  url.rs  util.rs
src/datafiles/: anim_data_xml.rs  credit_names.rs  group_id.rs  local_credits_file.rs  mod.rs  sprite_config.rs  tracker.rs
src/reporting/: activity.rs  discord.rs  mod.rs
