[package]
name = "spritecollab-srv"
description = "GraphQL server for interacting with assets and metadata of SpriteCollab."
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
license = "GPL-3.0-or-later"
version = "0.8.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15"
git2 = "0.20"
futures = "0.3"
juniper = { version = "0.17", features = ["chrono"] }
hyper = { version = "1.8", features = ["full"] }
juniper_hyper = "0.10"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2", "server-graceful"] }
tokio = { version = "1.48", features = ["full"] }
route-recognizer = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.8"
csv = "1.4"
fred = { version = "10", default-features = false, features = ["i-keys"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
regex = "1.12"
once_cell = "1.21"
fuzzy-matcher = "0.3"
itertools = "0.14"
async-trait = "0.1"
num-traits = "0.2"
zip = { version = "6.0", features = ["deflate"] }
image = "0.25"
indexmap = "2.12"
