[package]
name = "sc-activity-rec"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
log = { workspace = true }
sc-common = { path = "../sc-common" }
csv = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.4"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
pretty_env_logger = { workspace = true }
