[package]
name = "sc-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde-xml-rs = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = "0.3"
itertools = { workspace = true }
num-traits = "0.2"
